--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: day_night_switch
 description: A day night switch widget for Flutter.
-version: 0.0.2
+version: 0.0.2+1
 authors:
   - Divyanshu Bhargava<divyanshub024@gmail.com>
 homepage: https://github.com/divyanshub024/day_night_switch
