--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: day_night_switch
 description: A day night switch widget for Flutter.
-version: 1.0.0+2
+version: 1.0.0
 homepage: https://github.com/divyanshub024/day_night_switch
 repository: https://github.com/divyanshub024/day_night_switch
 issue_tracker: https://github.com/divyanshub024/day_night_switch/issues
